[package]
name = "shelly-coiot-3em"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
coap = "0.11.3"
coap-lite = "0.7.0" # this must match the version in coap
json = "0.12.4"
serde = "1.0.136"
serde_json = "1.0.79"
serde_tuple = "0.5.0"
serde_with = "1.12.0"
